<resources>
    <string name="app_name">Gasolineras</string>
    <string name="obteniendo">Obteniendo los datos...</string>
    <string name="datos_exito">Datos obtenidos con éxito</string>
    <string name="datos_no_accesibles">Los datos están siendo actualizados en el servidor, inténtelo más tarde</string>
    <string name="datos_no_obtenidos">No se han podido obtener los datos</string>
    <string name="no_internet_no_datos">No tiene conexión a internet, active el wifi y vuelvelo a intentar,
        si el error persiste intentelo de nuevo más tarde</string>
    <string name="gasoleoa">Gasóleo:</string>
    <string name="gasolina95">Gasolina:</string>
    <string name="pordefecto">por_defecto</string>
    <string name="moneda">€</string>
    <string name="AppDesarrollada">App desarrollada por:</string>
    <string name="infoTexto">\n\n Aarón Rodríguez Solar,\n Bárbara Martínez Carcedo,\n Daniel Sánchez Díez,\n Manuel Caballero Rabago,\n Miguel Casamichana Bolado y\n Rubén Calleja Reigadas</string>
    <string name="menuActualizar">Actualizar</string>
    <string name="menuInfo">Info</string>
    <string name="menuMisVehiculos">Mis Vehículos</string>
    <string name="menuDescuentos">Lista de descuentos</string>
    <string name="menuGasolineras">Gasolineras</string>
    <string name="modelo">Modelo:</string>
    <string name="combustible">Combustible:</string>
    <string name="anotacion">Nota:</string>
    <string name="pasoDatosInfo">DatosInfo</string>
    <string name="pasoDatosGasolinera">DatosGasolinera</string>
    <string name="pasoDatosVehiculo">DatosVehiculo</string>
    <string name="volverAIntentar">Volver a intentar</string>
    <string name="datosConUbicacion">Datos con ubicación obtenidos correctamente</string>
    <string name="primerVehiculo">Hey!</string>
    <string name="frasePrimerVehiculo">Parece que no tienes ningún vehículo añadido</string>
    <string name="botonAnhadir">Adelante</string>
    <string name="botonRechazar">No, gracias</string>
    <string name="deposito">Depósito(L):</string>
    <string name="consumoMedio">Consumo medio(L/100Km):</string>
    <string name="seleccionado">Seleccionado</string>
    <string name="seleccionarVehiculo">Seleccionar Vehículo</string>
    <string name="Combustible">Combustible</string>
    <string name="Descuento">Descuento</string>
    <string name="codigoDescuento">Código descuento:</string>
    <string name="descripcion">Descripción:</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="filtros_incompatibles">Filtros Incompatibles</string>
    <string name="infoFiltrosIncompatibles">Los filtros seleccionados son incompatibles, pulse aceptar para volver a la selección de filtros.</string>
    <string name="nota">Nota: Los filtros de un mismo tipo, por ejemplo "Combustible" no se pueden seleccionar a la vez</string>
    <string name="borrarFiltro">Borrar Filtro</string>
    <string name="fraseBorrarFiltro">Si desea borrar el filtro seleccionado pulse sí.</string>
    <string name="btnSiBorrarFiltro">Si, borrar filtro</string>
    <string name="btnNoBorrarFiltro">No</string>
    <string-array name="tipos_combustible">
        <item>GasoleoA</item>
        <item>Gasolina95</item>
    </string-array>
    <string name="AceptarDescuento">Aceptar</string>
    <string name="TituloDialogDescuento">Descuento disponible</string>
    <string name="TextoDialgoDescuento">El siguiente código se encuentra aplicado en la lista de gasolineras.</string>
</resources>
