<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Views.PopUpBorrarFiltroActivity">

    <TextView
        android:id="@+id/texViewTituloBorrarFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:paddingTop="20dp"
        android:text="@string/borrarFiltro"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/texViewFraseBorrarFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:paddingTop="20dp"
        android:text="@string/fraseBorrarFiltro"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonSiBorrarFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#FFFCFC"
        android:fontFamily="sans-serif"
        android:text="@string/btnSiBorrarFiltro"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

    <Button
        android:id="@+id/buttonNoBorrarFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="#FFFCFC"
        android:fontFamily="sans-serif"
        android:text="@string/btnNoBorrarFiltro"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />
</LinearLayout>