<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.PopUpConflicto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texViewAnhadir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:text="@string/filtros_incompatibles"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texViewAnhadir2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:paddingTop="20dp"
                android:text="@string/infoFiltrosIncompatibles"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:text="@string/nota"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/buttonAceptarConflicto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:text="@string/aceptar"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />

            <Button
                android:id="@+id/buttonCancelarConflicto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:text="@string/cancelar"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>