<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutVehiculo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayoutVehiculo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewModeloLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:text="@string/modelo"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutVehiculo1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCombustibleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#FFFFFF"
            android:text="@string/combustible"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewCombustible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textViewSeleccionado"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FDFCFC"
            android:gravity="end"
            android:text="@string/seleccionado"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutVehiculo1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAnotacionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/anotacion"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAnotacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>